[package]
name = "mhs"
version = "0.1.18"
authors = ["tokiedokie <42903136+tokiedokie@users.noreply.github.com>"]
edition = "2018"
description = "mhs is http server using in cli"
readme = "README.md"
homepage = "https://github.com/tokiedokie/mhs"
repository = "https://github.com/tokiedokie/mhs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[dependencies]
